route.yaml
apiVersion: route.openshift.io/v1 # if using openshift
kind: Route
metadata:
  # same nuances as in service  
  name: <deployment-name> 
  labels:
    app: <deployment-name>
    sandbox: <sandbox-name>
    <sandbox-name>: <group-name>
spec:
  port:
    targetPort: <port-name> | <port> # described in the service, preferably <port-name> 
  to:
    kind: Service
    name: <deployment-name> # defined in metadata: name:, often = <deployment-name>
  # Transport Layer Security (tls)
  # in this context:
  # edge: only happens on the frontend, unnecessary for backend
  # Redirect: redirects HTTP to HTTPS
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
